--- a/genral.html
+++ b/genral.html
@@ -44,6 +44,7 @@
             height: 40px;
             width: 150px;
             font-size: 1.5rem;
+            box-shadow: 0px 0px 2px rgb(255, 255, 255);
         }
         center{
             display: flex;
@@ -61,7 +62,7 @@
             <nav class="cff">
                 <h2>Arun Sports</h3>
                 <a href="login.html"><button id="bt1">Login</button> </a>
-                <a href="signUp.html"><button id="bt2">SignUp </button></a>
+                <a href="signup.html"><button id="bt2">SignUp </button></a>
               </nav></header>
               <div>
                 <p id="p1">Welcome to </p><br>
